// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates custom loot tables: parsed loot table 1`] = `
{
  "pools": [
    {
      "entries": [
        {
          "children": [
            {
              "name": "minecraft:diamond",
              "type": "minecraft:item",
            },
          ],
          "type": "minecraft:alternatives",
        },
        {
          "name": "minecraft:logs",
          "type": "minecraft:tag",
        },
      ],
      "rolls": 4,
    },
  ],
  "type": "minecraft:block",
}
`;

exports[`loot table removal removes loot table with output filter: loot tables containing any log 1`] = `
[
  "data/minecraft/loot_tables/blocks/acacia_log.json",
  "data/minecraft/loot_tables/blocks/acacia_wood.json",
  "data/minecraft/loot_tables/blocks/birch_log.json",
  "data/minecraft/loot_tables/blocks/birch_wood.json",
  "data/minecraft/loot_tables/blocks/crimson_hyphae.json",
  "data/minecraft/loot_tables/blocks/crimson_stem.json",
  "data/minecraft/loot_tables/blocks/dark_oak_log.json",
  "data/minecraft/loot_tables/blocks/dark_oak_wood.json",
  "data/minecraft/loot_tables/blocks/jungle_log.json",
  "data/minecraft/loot_tables/blocks/jungle_wood.json",
  "data/minecraft/loot_tables/blocks/oak_log.json",
  "data/minecraft/loot_tables/blocks/oak_wood.json",
  "data/minecraft/loot_tables/blocks/spruce_log.json",
  "data/minecraft/loot_tables/blocks/spruce_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_acacia_log.json",
  "data/minecraft/loot_tables/blocks/stripped_acacia_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_birch_log.json",
  "data/minecraft/loot_tables/blocks/stripped_birch_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_crimson_hyphae.json",
  "data/minecraft/loot_tables/blocks/stripped_crimson_stem.json",
  "data/minecraft/loot_tables/blocks/stripped_dark_oak_log.json",
  "data/minecraft/loot_tables/blocks/stripped_dark_oak_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_jungle_log.json",
  "data/minecraft/loot_tables/blocks/stripped_jungle_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_oak_log.json",
  "data/minecraft/loot_tables/blocks/stripped_oak_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_spruce_log.json",
  "data/minecraft/loot_tables/blocks/stripped_spruce_wood.json",
  "data/minecraft/loot_tables/blocks/stripped_warped_hyphae.json",
  "data/minecraft/loot_tables/blocks/stripped_warped_stem.json",
  "data/minecraft/loot_tables/blocks/warped_hyphae.json",
  "data/minecraft/loot_tables/blocks/warped_stem.json",
  "data/minecraft/loot_tables/chests/pillager_outpost.json",
  "data/minecraft/loot_tables/chests/spawn_bonus_chest.json",
  "data/minecraft/loot_tables/chests/village/village_taiga_house.json",
]
`;

exports[`loot tables output replacements keeps extended loot entry properties: modified wild rice loot table 1`] = `
{
  "pools": [
    {
      "conditions": [
        {
          "block": "farmersdelight:wild_rice",
          "condition": "minecraft:block_state_property",
          "properties": {
            "half": "lower",
          },
        },
        {
          "condition": "minecraft:location_check",
          "offsetY": 1,
          "predicate": {
            "block": {
              "block": "farmersdelight:wild_rice",
              "state": {
                "half": "upper",
              },
            },
          },
        },
      ],
      "entries": [
        {
          "children": [
            {
              "conditions": [
                {
                  "condition": "minecraft:match_tool",
                  "predicate": {
                    "tag": "forge:shears",
                  },
                },
              ],
              "name": "farmersdelight:wild_rice",
              "type": "minecraft:item",
            },
            {
              "conditions": [
                {
                  "condition": "minecraft:survives_explosion",
                },
              ],
              "name": "minecraft:apple",
              "type": "minecraft:item",
            },
          ],
          "type": "minecraft:alternatives",
        },
      ],
      "rolls": 1,
    },
    {
      "conditions": [
        {
          "block": "farmersdelight:wild_rice",
          "condition": "minecraft:block_state_property",
          "properties": {
            "half": "upper",
          },
        },
        {
          "condition": "minecraft:location_check",
          "offsetY": -1,
          "predicate": {
            "block": {
              "block": "farmersdelight:wild_rice",
              "state": {
                "half": "lower",
              },
            },
          },
        },
      ],
      "entries": [
        {
          "children": [
            {
              "conditions": [
                {
                  "condition": "minecraft:match_tool",
                  "predicate": {
                    "tag": "forge:shears",
                  },
                },
              ],
              "name": "farmersdelight:wild_rice",
              "type": "minecraft:item",
            },
            {
              "conditions": [
                {
                  "condition": "minecraft:survives_explosion",
                },
              ],
              "name": "minecraft:apple",
              "type": "minecraft:item",
            },
          ],
          "type": "minecraft:alternatives",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:block",
}
`;

exports[`loot tables output replacements removes outputs: modified deepslate_iron_ore loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "children": [
            {
              "conditions": [
                {
                  "condition": "minecraft:match_tool",
                  "predicate": {
                    "enchantments": [
                      {
                        "enchantment": "minecraft:silk_touch",
                        "levels": {
                          "min": 1,
                        },
                      },
                    ],
                  },
                },
              ],
              "type": "minecraft:empty",
            },
            {
              "functions": [
                {
                  "enchantment": "minecraft:fortune",
                  "formula": "minecraft:ore_drops",
                  "function": "minecraft:apply_bonus",
                },
                {
                  "function": "minecraft:explosion_decay",
                },
              ],
              "name": "minecraft:raw_iron",
              "type": "minecraft:item",
            },
          ],
          "type": "minecraft:alternatives",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:block",
}
`;

exports[`loot tables output replacements removes outputs: modified iron_ore loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "children": [
            {
              "conditions": [
                {
                  "condition": "minecraft:match_tool",
                  "predicate": {
                    "enchantments": [
                      {
                        "enchantment": "minecraft:silk_touch",
                        "levels": {
                          "min": 1,
                        },
                      },
                    ],
                  },
                },
              ],
              "type": "minecraft:empty",
            },
            {
              "functions": [
                {
                  "enchantment": "minecraft:fortune",
                  "formula": "minecraft:ore_drops",
                  "function": "minecraft:apply_bonus",
                },
                {
                  "function": "minecraft:explosion_decay",
                },
              ],
              "name": "minecraft:raw_iron",
              "type": "minecraft:item",
            },
          ],
          "type": "minecraft:alternatives",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:block",
}
`;

exports[`loot tables output replacements replaces outputs with additional tests: modified husk loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "add": false,
              "count": {
                "max": 2,
                "min": 0,
                "type": "minecraft:uniform",
              },
              "function": "minecraft:set_count",
            },
            {
              "count": {
                "max": 1,
                "min": 0,
                "type": "minecraft:uniform",
              },
              "function": "minecraft:looting_enchant",
            },
          ],
          "name": "minecraft:sand",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
    {
      "bonus_rolls": 0,
      "conditions": [
        {
          "condition": "minecraft:killed_by_player",
        },
        {
          "chance": 0.025,
          "condition": "minecraft:random_chance_with_looting",
          "looting_multiplier": 0.01,
        },
      ],
      "entries": [
        {
          "name": "forge:ingots/lead",
          "type": "minecraft:tag",
        },
        {
          "name": "minecraft:carrot",
          "type": "minecraft:item",
        },
        {
          "functions": [
            {
              "conditions": [
                {
                  "condition": "minecraft:entity_properties",
                  "entity": "this",
                  "predicate": {
                    "flags": {
                      "is_on_fire": true,
                    },
                  },
                },
              ],
              "function": "minecraft:furnace_smelt",
            },
          ],
          "name": "minecraft:potato",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:entity",
}
`;

exports[`loot tables output replacements replaces outputs with additional tests: modified iron_golem loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "add": false,
              "count": {
                "max": 2,
                "min": 0,
                "type": "minecraft:uniform",
              },
              "function": "minecraft:set_count",
            },
          ],
          "name": "minecraft:poppy",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "add": false,
              "count": {
                "max": 5,
                "min": 3,
                "type": "minecraft:uniform",
              },
              "function": "minecraft:set_count",
            },
          ],
          "name": "forge:ingots/lead",
          "type": "minecraft:tag",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:entity",
}
`;

exports[`loot tables output replacements replaces outputs with additional tests: modified zombie loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "add": false,
              "count": {
                "max": 2,
                "min": 0,
                "type": "minecraft:uniform",
              },
              "function": "minecraft:set_count",
            },
            {
              "count": {
                "max": 1,
                "min": 0,
                "type": "minecraft:uniform",
              },
              "function": "minecraft:looting_enchant",
            },
          ],
          "name": "minecraft:rotten_flesh",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
    {
      "bonus_rolls": 0,
      "conditions": [
        {
          "condition": "minecraft:killed_by_player",
        },
        {
          "chance": 0.025,
          "condition": "minecraft:random_chance_with_looting",
          "looting_multiplier": 0.01,
        },
      ],
      "entries": [
        {
          "name": "forge:ingots/lead",
          "type": "minecraft:tag",
        },
        {
          "name": "minecraft:carrot",
          "type": "minecraft:item",
        },
        {
          "functions": [
            {
              "conditions": [
                {
                  "condition": "minecraft:entity_properties",
                  "entity": "this",
                  "predicate": {
                    "flags": {
                      "is_on_fire": true,
                    },
                  },
                },
              ],
              "function": "minecraft:furnace_smelt",
            },
          ],
          "name": "minecraft:potato",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:entity",
}
`;

exports[`loot tables output replacements replaces outputs with additional tests: modified zombie_villager loot table 1`] = `
{
  "pools": [
    {
      "bonus_rolls": 0,
      "entries": [
        {
          "functions": [
            {
              "add": false,
              "count": {
                "max": 2,
                "min": 0,
                "type": "minecraft:uniform",
              },
              "function": "minecraft:set_count",
            },
            {
              "count": {
                "max": 1,
                "min": 0,
                "type": "minecraft:uniform",
              },
              "function": "minecraft:looting_enchant",
            },
          ],
          "name": "minecraft:rotten_flesh",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
    {
      "bonus_rolls": 0,
      "conditions": [
        {
          "condition": "minecraft:killed_by_player",
        },
        {
          "chance": 0.025,
          "condition": "minecraft:random_chance_with_looting",
          "looting_multiplier": 0.01,
        },
      ],
      "entries": [
        {
          "name": "forge:ingots/lead",
          "type": "minecraft:tag",
        },
        {
          "name": "minecraft:carrot",
          "type": "minecraft:item",
        },
        {
          "functions": [
            {
              "conditions": [
                {
                  "condition": "minecraft:entity_properties",
                  "entity": "this",
                  "predicate": {
                    "flags": {
                      "is_on_fire": true,
                    },
                  },
                },
              ],
              "function": "minecraft:furnace_smelt",
            },
          ],
          "name": "minecraft:potato",
          "type": "minecraft:item",
        },
      ],
      "rolls": 1,
    },
  ],
  "type": "minecraft:entity",
}
`;
